# workbench-android

./: .gitignore  README.md
WorkbenchBS/: AndroidManifest.xml  MainActivity.cs  WorkbenchBS.csproj  WorkbenchBS.slnx
WorkbenchBS/Resources/values/: strings.xml
crates/workbench_bs_android/: Cargo.toml
crates/workbench_bs_android/src/: lib.rs  opengl.rs
