[package]
name = "workbench_bs_android"
version = "0.1.0"
edition = "2024"
authors = ["Benjamin von Strandmann <benjamin.von.strandmann@benginestudios.net>"]

[lib]
name = "workbench_bs_android_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]

#android-activity is imported by winit
#android-activity = { version = "0.6", features = ["native-activity"] }

winit = { version = "0.30.12", features = ["android-native-activity"] }
log = "0.4"
android_logger = "0.14"